kubernetes/vl3box/apps/vl3box/externals/local.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vl3box-prev
  namespace: vl3box
  labels:
    app.kubernetes.io/name: vl3box-prev
    app.kubernetes.io/instance: vl3box-prev
spec:
  type: ExternalName
  externalName: 10.11.1.10
  ports:
    - name: http
      port: &port 3000
      protocol: TCP
      targetPort: *port
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vl3box-prev
  namespace: vl3box
  annotations:
    external-dns.alpha.kubernetes.io/target: i.prev.vl3box.com
  labels:
    app.kubernetes.io/name: vl3box-prev
    app.kubernetes.io/instance: vl3box-prev
spec:
  ingressClassName: internal-nginx
  rules:
    - host: cms.prev.vl3box.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vl3box-prev
                port:
                  number: 3000
    - host: data.prev.vl3box.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vl3box-prev
                port:
                  number: 3000
    - host: helper.prev.vl3box.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vl3box-prev
                port:
                  number: 3000
    - host: next2.prev.vl3box.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vl3box-prev
                port:
                  number: 3000
    - host: node.prev.vl3box.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vl3box-prev
                port:
                  number: 3000
    - host: spider2.prev.vl3box.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vl3box-prev
                port:
                  number: 3000
    - host: team.prev.vl3box.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vl3box-prev
                port:
                  number: 3000
    - host: pay.prev.vl3box.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vl3box-prev
                port:
                  number: 3000
    - host: server.prev.vl3box.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vl3box-prev
                port:
                  number: 3000
  tls:
    - hosts:
        - cms.prev.vl3box.com
        - data.prev.vl3box.com
        - helper.prev.vl3box.com
        - next2.prev.vl3box.com
        - node.prev.vl3box.com
        - spider2.prev.vl3box.com
        - pay.prev.vl3box.com
        - team.prev.vl3box.com
        - server.prev.vl3box.com
